--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@line/liff": "2.25.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
     "@types/react": "19.0.12",
