--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,9 @@
   },
   "dependencies": {
     "@line/liff": "2.25.1",
-    "@types/react-router-dom": "^5.3.3",
-    "frontend": "file:",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-router-dom": "^7.4.1"
+    "react-router": "^7.4.1"
   },
   "devDependencies": {
     "@types/react": "19.0.12",
